--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
     <meta name="description" content="Salon fryzjerski Nefretete jest najlepszy w Będzinie. Miejsce stworzonę z pasji do fryzjerstwa.
     ">
     <meta name="keywords" content="fryzjer będzin,fryzjer syberka,gdzie mogę się obciąć,będzin fryzjerzy,piękne fryzury,fryzura okolicznościowa,fryzura na komunie,fryzura na ślub">
-    <link rel="icon" type="image/png" href="/image/favicon.png">
-    <script src="https://kit.fontawesome.com/d9ff8742ac.js" crossorigin="anonymous"></script>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
+    <meta name="google-site-verification" content="FvWwdgZp6pV8qqRjGDF_3xTeHVXdMEp1wvbYJJxTwn0" />
+    <link rel="icon" type="image/png" href="/image/favicon.png" defer>
+    <script src="https://kit.fontawesome.com/d9ff8742ac.js" crossorigin="anonymous" defer></script>
+    <link rel="preconnect" href="https://fonts.gstatic.com" defer>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet" defer>
     <link rel="stylesheet" type="text/css" href="css/slick.css"/>
     <link rel="stylesheet" href="/css/style.css">
 </head>
@@ -59,14 +60,14 @@
                 </div>
                 </div>
                 <div class="main__photos">
-                    <div class="main__photo"><img src="/image/cer1.jpg" alt="Certyfikat za zajęcie pierwszego miejsca w plebiscycie Mistrzowie Urody w powiecię Będzińskim."> </div>
-                    <div class="main__photo"><img src="/image/cer2.jpg" alt="Certyfikat za zajęcie trzeciego miejsca w plebiscycie Mistrzowie Urody w województwie śląskim."></div>
-                    <div class="main__photo"><img src="/image/cer3.jpg" alt="Dyplom za osiągnięcie statusu laurata. Ocena 8.6 na 10 punktów."></div>
-                    <div class="main__photo"><img src="/image/cer4.jpg" alt="Certyfikat zadowolony klient. Dbałość i satysfakcję klienta."></div>
-                    <div class="main__photo"><img src="/image/cer5.jpg" alt="Dyplom New look. Kreatywne pomysły. Kreator 2013."></div>
-                    <div class="main__photo"><img src="/image/cer6.jpg" alt="Kreator 2013 Look ART&HAIR. Gratulują kreatywnych pomysłów."></div>
-                    <div class="main__photo"><img src="/image/cer7.jpg" alt="Dyplom za uczestnictwo. TOP CITY, konkurs rozegrany został podczas XIV fetiwalu fryzjerstwa HAIR HAIR w Sosnowcu."></div>
-                    <div class="main__photo"><img src="/image/cer8.jpg" alt="Certyfikat BBONDE Tychy 2019. Szkolenie fryzjerskie z koloryzacji."></div>
+                    <div class="main__photo"><img data-src="/image/cer1.jpg" class="lazyload" alt="Certyfikat za zajęcie pierwszego miejsca w plebiscycie Mistrzowie Urody w powiecię Będzińskim."> </div>
+                    <div class="main__photo"><img data-src="/image/cer2.jpg" class="lazyload" alt="Certyfikat za zajęcie trzeciego miejsca w plebiscycie Mistrzowie Urody w województwie śląskim."></div>
+                    <div class="main__photo"><img data-src="/image/cer3.jpg" class="lazyload" alt="Dyplom za osiągnięcie statusu laurata. Ocena 8.6 na 10 punktów."></div>
+                    <div class="main__photo"><img data-src="/image/cer4.jpg" class="lazyload" alt="Certyfikat zadowolony klient. Dbałość i satysfakcję klienta."></div>
+                    <div class="main__photo"><img data-src="/image/cer5.jpg" class="lazyload" alt="Dyplom New look. Kreatywne pomysły. Kreator 2013."></div>
+                    <div class="main__photo"><img data-src="/image/cer6.jpg" class="lazyload" alt="Kreator 2013 Look ART&HAIR. Gratulują kreatywnych pomysłów."></div>
+                    <div class="main__photo"><img data-src="/image/cer7.jpg" class="lazyload" alt="Dyplom za uczestnictwo. TOP CITY, konkurs rozegrany został podczas XIV fetiwalu fryzjerstwa HAIR HAIR w Sosnowcu."></div>
+                    <div class="main__photo"><img data-src="/image/cer8.jpg" class="lazyload" alt="Certyfikat BBONDE Tychy 2019. Szkolenie fryzjerskie z koloryzacji."></div>
                     
                 </div>
             </div>
@@ -79,17 +80,17 @@
                 <div class="main__underline right"></div>    
             </div>
             <div class="main__images">
-                <div class="main__image"><img src="/image/gal1.jpg" alt="Zdjęcie przedstawia fryzure kobiety z dwóch profili."></div>
-                <div class="main__image"><img src="/image/gal2.jpg" alt="Widzimy włosy z lewej strony przed zabiegiem a po lewej po. Zostały wyprostowane i trochę przycięte."></div>
-                <div class="main__image"><img src="/image/gal3.jpg" alt="Włosy zostały przycięte, wyprostowane. Wyglądają odnowione."></div>
-                <div class="main__image"><img src="/image/gal4.jpg" alt="Włosy zostały pofalowane."></div>
-                <div class="main__image"><img src="/image/gal5.jpg" alt="Zostały znakomicie wyprostowane za pomocą prostowania kreatynowego."></div>
-                <div class="main__image"><img src="/image/gal6.jpg" alt="Pofarbowane włosy z koloru czarnego na bordowy,czerwony."></div>
-                <div class="main__image"><img src="/image/gal7.jpg" alt="Podcięte blond włosy."></div>
-                <div class="main__image"><img src="/image/gal8.jpg" alt="Kilka profili zdjęć podciętych włosów."></div>
-                <div class="main__image"><img src="/image/gal9.jpg" alt="Białe krótkie kręcone włosy."></div>
+                <div class="main__image"><img data-src="/image/gal1.jpg" class="lazyload" alt="Zdjęcie przedstawia fryzure kobiety z dwóch profili."></div>
+                <div class="main__image"><img data-src="/image/gal2.jpg" class="lazyload" alt="Widzimy włosy z lewej strony przed zabiegiem a po lewej po. Zostały wyprostowane i trochę przycięte."></div>
+                <div class="main__image"><img data-src="/image/gal3.jpg" class="lazyload" alt="Włosy zostały przycięte, wyprostowane. Wyglądają odnowione."></div>
+                <div class="main__image"><img data-src="/image/gal4.jpg" class="lazyload" alt="Włosy zostały pofalowane."></div>
+                <div class="main__image"><img data-src="/image/gal5.jpg" class="lazyload" alt="Zostały znakomicie wyprostowane za pomocą prostowania kreatynowego."></div>
+                <div class="main__image"><img data-src="/image/gal6.jpg" class="lazyload" alt="Pofarbowane włosy z koloru czarnego na bordowy,czerwony."></div>
+                <div class="main__image"><img data-src="/image/gal7.jpg" class="lazyload" alt="Podcięte blond włosy."></div>
+                <div class="main__image"><img data-src="/image/gal8.jpg" class="lazyload" alt="Kilka profili zdjęć podciętych włosów."></div>
+                <div class="main__image"><img data-src="/image/gal9.jpg" class="lazyload" alt="Białe krótkie kręcone włosy."></div>
             </div>
-                <div class="main__insta"><a href="https://instagram.com/nefretete.salonfryzjerski?igshid=eqkbv93kn561" target="_blank"><button class="main__insta--btn">zobacz więcej na instagramie</button></a></div>
+                <div class="main__insta"><a href="https://instagram.com/nefretete.salonfryzjerski?igshid=eqkbv93kn561" target="_blank" rel="noopener"><button class="main__insta--btn">zobacz więcej na instagramie</button></a></div>
           </div> 
         </section>
         <section class="main__price scroll-fix" id="price">
@@ -148,7 +149,7 @@
                <div class="main__priceLeft"> <div class="main__name"><span class="main__nameSpanLeft">headline podniesienie włosa</span></div><div class="main__namePrice"><span>85 zł</span></div></div>
                <div class="main__priceRight"> <div class="main__name"><span class="main__nameSpanLeft">prostowanie keratynowe</span></div><div class="main__namePrice"><span>210 — 250 zł</span></div></div>
             </div>
-            <div class="main__insta"><a href="https://www.moment.pl/nefretete-salon-fryzjerski" target="_blank"><button class="main__insta--btn">Zarezerwuj termin</button></a></div>
+            <div class="main__insta"><a href="https://www.moment.pl/nefretete-salon-fryzjerski" target="_blank" rel="noopener"><button class="main__insta--btn">Zarezerwuj termin</button></a></div>
             
           </div> 
         </section>
@@ -165,26 +166,27 @@
                         <div class="main__contactItem"><span>Telefon:</span><span>501-598-045</span></div>
                         <div class="main__contactItem">
                             <span>Social Media:</span> 
-                            <span><a href="https://www.facebook.com/NefreteteBedzin/?ref=page_internal" target="_blank"><i class="fab fa-facebook-square"></i></a></span> 
-                            <span><a href="https://instagram.com/nefretete.salonfryzjerski?igshid=eqkbv93kn561" target="_blank"><i class="fab fa-instagram-square"></a></i></span>
+                            <span><a href="https://www.facebook.com/NefreteteBedzin/?ref=page_internal" target="_blank" rel="noopener"><i class="fab fa-facebook-square"></i></a></span> 
+                            <span><a href="https://instagram.com/nefretete.salonfryzjerski?igshid=eqkbv93kn561" target="_blank" rel="noopener"><i class="fab fa-instagram-square"></a></i></span>
                         </div>
                         <div class="main__contactItem"><span>Adres:</span> <span>Zwycięstwa 36, 42-500 Będzin</span></div>
                 </div>
                 <div class="main__map">
-                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3602.5346263993533!2d19.117926472582678!3d50.32222360828471!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x22907f6271473861!2sWierzchowska%20Anna.%20Salon%20fryzjerski!5e0!3m2!1spl!2spl!4v1613388736894!5m2!1spl!2spl" frameborder="0" style="border:0;" allowfullscreen="true" aria-hidden="false" tabindex="0" class="main__itemMap"></iframe>
+                    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3602.5346263993533!2d19.117926472582678!3d50.32222360828471!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x22907f6271473861!2sWierzchowska%20Anna.%20Salon%20fryzjerski!5e0!3m2!1spl!2spl!4v1613388736894!5m2!1spl!2spl" frameborder="0" style="border:0;" allowfullscreen="true" aria-hidden="false" tabindex="0" class="main__itemMap" defer></iframe>
                 </div>
             </div>
                 </div>
-                <div class="main__insta"><a href="https://www.moment.pl/nefretete-salon-fryzjerski" target="_blank"><button class="main__insta--btn">Zarezerwuj termin</button></a></div>
+                <div class="main__insta"><a href="https://www.moment.pl/nefretete-salon-fryzjerski" target="_blank" rel="noopener"><button class="main__insta--btn">Zarezerwuj termin</button></a></div>
           </div> 
         </section>
     </main>
     <footer><p> &copy; <span class="footer-year"> </span> Salon Fryzjerski Nefretete w Będzinie</p></footer>
-    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
-<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js"></script>
-<script type="text/javascript" src="/js/slick.min.js"></script>
-    <script src="/js/slick.js"></script>
-    <script src="/js/main.js"></script>  
+    <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js" defer></script>
+<script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js" defer></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" defer></script>
+<script type="text/javascript" src="/js/slick.min.js" defer></script>
+    <script src="/js/slick.js" defer></script>
+    <script src="/js/lazysizes.min.js" defer></script>
+    <script src="/js/main.js" defer></script>  
 </body>
 </html>
